--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+clap = "4.4.3"
 fancy-regex = "0.11.0"
 lazy_static = "1.4.0"
 linkify = "0.10.0"
