--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,4 +47,5 @@ jobs:
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
+          token: ${{secrets.CODECOV_TOKEN}}
           verbose: true
