--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-clap = "4.4.3"
+clap = { version = "4.4.3", features = ["derive"] }
 linkify = "0.10.0"
 reqwest = { version = "0.11.20", features = ["blocking"] }
 url = "2.4.1"
